<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DemoActivity!</string>
    <string name="app_name">Demo</string>
    <string name="tcp">Tcp</string>
    <string name="udp">Udp</string>
    <string name="camera">Camera</string>
    <string name="wifi">Wifi</string>
    <string name="gps">Gps</string>
    <string name="notifications">Notifications</string>
    <string name="getLocation">Get Current Location</string>
    <string name="showMap">Show Google Map</string>
    <string name="connectToServer">Connect To Server</string>
    <string name="showLocation">Show your location on map</string>

</resources>