<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/app_name" />
    
    <Button
            android:id="@+id/btnGetLocation"
            android:tag="btnGetLocation"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:text="@string/getLocation" />
    <TextView 
        	android:id="@+id/tvLocation"
        	android:layout_width="299dp"
            android:layout_height="120dp"/>
    <Button
            android:id="@+id/btnShowLocation"
            android:tag="btnShowLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showLocation" />
  
    <Button
            android:id="@+id/btnShowMap"
            android:tag="btnShowMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showMap" />
  </LinearLayout>